adding jar build plugin in pom.xml

--- a/MyApp/pom.xml
+++ b/MyApp/pom.xml
@@ -4,4 +4,24 @@
   <artifactId>MyApp</artifactId>
   <version>1</version>
   <name>MyApp</name>
+  
+  <build>
+    <plugins>
+      <plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <configuration>
+        	<archive>
+        		<manifest>
+        			<mainClass>com.ofss.HelloWorld
+        		</mainClass>
+        		</manifest>
+        	</archive>
+        </configuration>
+      </plugin>
+      
+    </plugins>
+  </build>
+  
+  
 </project>
